@@ -6962,7 +6962,7 @@ See
 for a description of the format of
 .IR job .
 In the third form,
-.BR "kill \-l" ,
+.B "kill \-l"
 or
 .BR "kill \-L" ,
 if
@@ -6971,9 +6971,10 @@ is not specified,
 the signal names are listed.
 The
 .B \-l
-option list only the signal names.
+option lists only the signal names.
+The
 .B \-L
-options lists each signal name and corresponding number.
+option lists each signal name and corresponding number.
 Otherwise, for each
 .I sig\^
 that is a name, the corresponding signal number is listed.
